# Knit-Fabric-Simulation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
.zed/: settings.json
include/glad/: glad.h
shaders/: FragShader.frag  FragShader.glsl  VertShader.glsl  VertShader.vert  vertex.vert
src/: Application.cpp  Application.h  BVH.cpp  BVH.h  Camera.h  Cloth.cpp  Cloth.h  Collision.h  Constants.h  FragShader.frag  FragShader.glsl  ImGuiManager.cpp  ImGuiManager.h  InputHandler.h  Mesh.h  Model.cpp  Model.h  Mouse.h  NewApp.cpp  NewApp.h  NewCollision.cpp  NewCollision.h  Object.h  Particle.h  Shader.h  Spring.h  TableMesh.cpp  VertShader.glsl  VertShader.vert  glad.c  imgui.ini  main.cpp
